# Leeds-LoopSubdivision

./: CMakeLists.txt  LoopSubdivision.pro  README.md
src/: ArcBall.cpp  ArcBall.h  Cartesian3.cpp  Cartesian3.h  DirectedEdgeSurface.cpp  DirectedEdgeSurface.h  Homogeneous4.cpp  Quaternion.cpp  Quaternion.h  RGBAImage.cpp  RenderController.cpp  RenderController.h  RenderWidget.cpp  RenderWidget.h  RenderWindow.cpp  RenderWindow.h  SphereVertices.cpp  main.cpp
